# um-userservice/src/user/adapter/repository/mongoose/user.mongoose.schema.js
@@ -11,6 +11,7 @@ const userSchema = new mongoose.Schema({
   name: String,
   surname: String,
   email: String,
+  password: String,
 });
 
 const User = mongoose.model('User', userSchema);
